@@ -5,6 +5,7 @@ Version 1.1.1.dev0
 
   * vim with working application menu
   * realy disabled accels for vim
+  * toggle buttons to on/off editor and preview
 
 Version 1.1.0 - 03.08.2017 7:00
 
